2002-10-09  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/Doc.cpp: Fixed bug where relative URI
          paths were being corrupted in Doc::seturl.

2002-10-07  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/browser.h,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp: Changed
          Browser::render to take a Viewer & instead of a Viewer *.

2002-09-30  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/Viewer.h,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h: Improved
          const-correctness of Viewer::setViewpoint.

        * src/openvrml/OpenVRML/VrmlFrustum.cpp,
          src/openvrml/OpenVRML/VrmlFrustum.h,
          src/openvrml/OpenVRML/bvolume.cpp,
          src/openvrml/OpenVRML/bvolume.h: Removed BVolume::dump and
          VrmlFrustum::dump.

        * src/openvrml-gl/OpenVRML/GL/Makefile.am,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/private.h: Removed private.h.
          

2002-09-29  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/Viewer.cpp,
          src/openvrml/OpenVRML/Viewer.h,
          src/openvrml/OpenVRML/VrmlFrustum.cpp,
          src/openvrml/OpenVRML/common.h,
          src/openvrml/OpenVRML/private.h,
          src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/private.h: Moved utility functions
          from OpenVRML::Viewer to OpenVRML::GL::ViewerOpenGL.

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp: Corrected minor
          error in computeView.

        * src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/private.h: Corrected correction to
          minor error in computeView.

2002-09-27  Braden McDaniel  <braden@endoframe.com>
